2009-12-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* kern/device.c (grub_device_iterate): Ignore errors during first scan.
	Fixes amarsh bug.

2009-12-09  Bruce Dubbs  <bruce.dubbs@gmail.com>

	Remove miscellaneous files in distclean target.

	* Makefile.in: Remove docs/{grub.info,version.texi,stamp-vti}

2009-12-09  Colin Watson  <cjwatson@ubuntu.com>

	* util/grub-mkconfig_lib.in: Don't set grub_probe or grub_mkrelpath
	if they're already set.  This resolves the conflict between my
	grub-install change on 2009-10-06 and Felix' change on 2009-11-11,
	fixing the --grub-probe option again.
	* util/sparc64/ieee1275/grub-install.in: Revert the last piece of my
	change on 2009-10-06, so that we now once again source
	`${libdir}/grub/grub-mkconfig_lib' after options have been parsed.

2009-12-08  Robert Millan  <rmh.grub@aybabtu.com>

	* conf/common.rmk [sparc64-ieee1275] (grub_mkdevicemap_SOURCES): Use
	`util/ieee1275/ofpath.c' and `util/ieee1275/devicemap.c' instead of
	`util/devicemap.c'.

2009-12-08  Carles Pina i Estany  <carles@pina.cat>

	* include/grub/misc.h (grub_printf_): New declaration.
	* kern/misc.c (grub_printf_): New definition.
	* normal/main.c (grub_normal_reader_init): Use `grub_printf_' and `N_'
	instead of `grub_printf' and `_'.
	* normal/menu_entry.c (store_completion): Likewise.
	(run): Likewise.
	(grub_menu_entry_run): Likewise.
	* normal/menu_text.c (grub_wait_after_message): Likewise.
	(notify_booting): Likewise.
	(notify_fallback): Likewise.
	(notify_execution_failure): Likewise.

2009-12-07  Colin Watson  <cjwatson@ubuntu.com>

	* configure.ac: Check for vasprintf.
	* util/misc.c (asprintf): Move allocation from here ...
	(vasprintf): ... to here.  New function.
	(xasprintf): New function.
	* include/grub/util/misc.h (vasprintf, xasprintf): Add
	prototypes.
	* util/getroot.c (grub_util_get_grub_dev): Use xasprintf.
	* util/grub-mkfont.c (write_font): Likewise.
	* util/grub-probe.c (probe): Likewise.